--- a/index.html
+++ b/index.html
@@ -127,6 +127,6 @@
     ></script>
 <!-- add moment js script -->
 <script type = "text/JavaScript" src = " https://MomentJS.com/downloads/moment.js"></script>
-    <script src="/Assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
