wip: moved js script up

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       </div>
     </div>
     <!-- div container end -->
-
+    <script src="./assets/js/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
@@ -126,7 +126,10 @@
       crossorigin="anonymous"
     ></script>
     <!-- add moment js script -->
-    <script type = "text/JavaScript" src = " https://MomentJS.com/downloads/moment.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script
+      type="text/JavaScript"
+      src=" https://MomentJS.com/downloads/moment.js"
+    ></script>
+    
   </body>
 </html>
